--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </svg>
               </div>
               <h3 class="datails-list-tittle">Внимание к деталям</h3>
-              <p class="datails-list-desсription">
+              <p>
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
@@ -80,7 +80,7 @@
                 </svg>
               </div>
               <h3 class="datails-list-tittle">Пунктуальность</h3>
-              <p class="datails-list-desсription">
+              <p>
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
@@ -91,7 +91,7 @@
                 </svg>
               </div>
               <h3 class="datails-list-tittle">Планирование</h3>
-              <p class="datails-list-desсription">
+              <p>
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
@@ -102,9 +102,7 @@
                 </svg>
               </div>
               <h3 class="datails-list-tittle">Современные технологии</h3>
-              <p class="datails-list-desсription">
-                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-              </p>
+              <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
           </ul>
         </div>
@@ -136,29 +134,29 @@
                 <p class="team-text">Product Designer</p>
                 <ul class="social-list list">
                   <li class="social-list-items">
-                    <a class="team-social-link" href="">
-                      <svg class="team-social-icon" width="20" height="20">
+                    <a class="social-link" href="" target="_blank" rel="noreferrer noopener">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
-                    <a class="team-social-link" href="">
-                      <svg class="team-social-icon" width="20" height="20">
+                    <a class="social-link" href="" target="_blank" rel="noreferrer noopener">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/sprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
-                    <a class="team-social-link" href="">
-                      <svg class="team-social-icon" width="20" height="20">
+                    <a class="social-link" href="" target="_blank" rel="noreferrer noopener">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
-                    <a class="team-social-link" href="">
-                      <svg class="team-social-icon" width="20" height="20">
+                    <a class="social-link" href="" target="_blank" rel="noreferrer noopener">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/sprite.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -173,29 +171,29 @@
                 <p class="team-text">Frontend Developer</p>
                 <ul class="social-list list">
                   <li class="social-list-items">
-                    <a class="team-social-link" href="">
-                      <svg class="team-social-icon" width="20" height="20">
+                    <a class="social-link" href="" target="_blank" rel="noreferrer noopener">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
-                    <a class="team-social-link" href="">
-                      <svg class="team-social-icon" width="20" height="20">
+                    <a class="social-link" href="" target="_blank" rel="noreferrer noopener">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/sprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
-                    <a class="team-social-link" href="">
-                      <svg class="team-social-icon" width="20" height="20">
+                    <a class="social-link" href="" target="_blank" rel="noreferrer noopener">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
-                    <a class="team-social-link" href="">
-                      <svg class="team-social-icon" width="20" height="20">
+                    <a class="social-link" href="" target="_blank" rel="noreferrer noopener">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/sprite.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -210,29 +208,29 @@
                 <p class="team-text">Marketing</p>
                 <ul class="social-list list">
                   <li class="social-list-items">
-                    <a class="team-social-link" href="">
-                      <svg class="team-social-icon" width="20" height="20">
+                    <a class="social-link" href="" target="_blank" rel="noreferrer noopener">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
-                    <a class="team-social-link" href="">
-                      <svg class="team-social-icon" width="20" height="20">
+                    <a class="social-link" href="" target="_blank" rel="noreferrer noopener">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/sprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
-                    <a class="team-social-link" href="">
-                      <svg class="team-social-icon" width="20" height="20">
+                    <a class="social-link" href="" target="_blank" rel="noreferrer noopener">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
-                    <a class="team-social-link" href="">
-                      <svg class="team-social-icon" width="20" height="20">
+                    <a class="social-link" href="" target="_blank" rel="noreferrer noopener">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/sprite.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -247,29 +245,29 @@
                 <p class="team-text">UI Designer</p>
                 <ul class="social-list list">
                   <li class="social-list-items">
-                    <a class="team-social-link" href="">
-                      <svg class="team-social-icon" width="20" height="20">
+                    <a class="social-link" href="" target="_blank" rel="noreferrer noopener">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/sprite.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
-                    <a class="team-social-link" href="">
-                      <svg class="team-social-icon" width="20" height="20">
+                    <a class="social-link" href="" target="_blank" rel="noreferrer noopener">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/sprite.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
-                    <a class="team-social-link" href="">
-                      <svg class="team-social-icon" width="20" height="20">
+                    <a class="social-link" href="" target="_blank" rel="noreferrer noopener">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/sprite.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-items">
-                    <a class="team-social-link" href="">
-                      <svg class="team-social-icon" width="20" height="20">
+                    <a class="social-link" href="" target="_blank" rel="noreferrer noopener">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/sprite.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -285,42 +283,42 @@
           <h2 class="section-title">Постоянные клиенты</h2>
           <ul class="list card-set">
             <li class="card-set-list clients-list">
-              <a class="clients-link link" href="">
+              <a class="clients-link link" href="" target="_blank" rel="noreferrer noopener">
                 <svg class="client-icon" width="42" height="46">
                   <use href="./images/sprite.svg#icon-group"></use>
                 </svg>
               </a>
             </li>
             <li class="card-set-list clients-list">
-              <a class="clients-link link" href=""
+              <a class="clients-link link" href="" target="_blank" rel="noreferrer noopener"
                 ><svg class="client-icon" width="40" height="52">
                   <use href="./images/sprite.svg#icon-group-1"></use>
                 </svg>
               </a>
             </li>
             <li class="card-set-list clients-list">
-              <a class="clients-link link" href=""
+              <a class="clients-link link" href="" target="_blank" rel="noreferrer noopener"
                 ><svg class="client-icon" width="44" height="42">
                   <use href="./images/sprite.svg#icon-group-2"></use>
                 </svg>
               </a>
             </li>
             <li class="card-set-list clients-list">
-              <a class="clients-link link" href=""
+              <a class="clients-link link" href="" target="_blank" rel="noreferrer noopener"
                 ><svg class="client-icon" width="84" height="40">
                   <use href="./images/sprite.svg#icon-group-3"></use>
                 </svg>
               </a>
             </li>
             <li class="card-set-list clients-list">
-              <a class="clients-link link" href=""
+              <a class="clients-link link" href="" target="_blank" rel="noreferrer noopener"
                 ><svg class="client-icon" width="62" height="46">
                   <use href="./images/sprite.svg#icon-group-4"></use>
                 </svg>
               </a>
             </li>
             <li class="card-set-list clients-list">
-              <a class="clients-link link" href=""
+              <a class="clients-link link" href="" target="_blank" rel="noreferrer noopener"
                 ><svg class="client-icon" width="94" height="42">
                   <use href="./images/sprite.svg#icon-group-5"></use>
                 </svg>
@@ -333,7 +331,7 @@
     <footer class="footer">
       <div class="container footer-markup">
         <div class="footer-contact">
-          <a class="logo-link link" href="">Web<span class="logo-footer">Studio</span></a>
+          <a class="logo link" href="">Web<span class="logo-footer">Studio</span></a>
           <address>
             <ul class="list">
               <li class="address-list">
@@ -356,31 +354,31 @@
         </div>
         <div>
           <p class="social-link-title">Присоеденяйтесь</p>
-          <ul class="footer-social-list list">
+          <ul class="social-list list">
             <li class="social-list-items">
-              <a class="footer-social-link" href="">
-                <svg class="footer-social-icon" width="20" height="20">
+              <a class="social-link" href="" target="_blank" rel="noreferrer noopener">
+                <svg class="social-icon" width="20" height="20">
                   <use href="./images/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-items">
-              <a class="footer-social-link" href="">
-                <svg class="footer-social-icon" width="20" height="20">
+              <a class="social-link" href="" target="_blank" rel="noreferrer noopener">
+                <svg class="social-icon" width="20" height="20">
                   <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-items">
-              <a class="footer-social-link" href="">
-                <svg class="footer-social-icon" width="20" height="20">
+              <a class="social-link" href="" target="_blank" rel="noreferrer noopener">
+                <svg class="social-icon" width="20" height="20">
                   <use href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-items">
-              <a class="footer-social-link" href="">
-                <svg class="footer-social-icon" width="20" height="20">
+              <a class="social-link" href="" target="_blank" rel="noreferrer noopener">
+                <svg class="social-icon" width="20" height="20">
                   <use href="./images/sprite.svg#icon-linkedin"></use>
                 </svg>
               </a>
