--- a/portfolio.html
+++ b/portfolio.html
@@ -75,8 +75,8 @@
           </ul>
           <h1 class="visually-hidden">Портфолио галерея</h1>
           <ul class="list card-set">
-            <li class="card-set-list portfolio-link">
-              <a class="link" href="" target="_blank" rel="noreferrer noopener">
+            <li class="card-set-list">
+              <a class="link portfolio-link" href="" target="_blank" rel="noreferrer noopener">
                 <img src="./images/img8.jpg" alt="Веб-сайт на ноутбуке" width="370" />
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-title">Технокряк</h2>
@@ -84,8 +84,8 @@
                 </div>
               </a>
             </li>
-            <li class="card-set-list portfolio-link">
-              <a class="link" href="" target="_blank" rel="noreferrer noopener">
+            <li class="card-set-list">
+              <a class="link portfolio-link" href="" target="_blank" rel="noreferrer noopener">
                 <img src="./images/img9.jpg" alt="Постер баскетболистов" width="370" />
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
@@ -93,8 +93,8 @@
                 </div>
               </a>
             </li>
-            <li class="card-set-list portfolio-link">
-              <a class="link" href="" target="_blank" rel="noreferrer noopener">
+            <li class="card-set-list">
+              <a class="link portfolio-link" href="" target="_blank" rel="noreferrer noopener">
                 <img src="./images/img10.jpg" alt="Логотип рыбного ресторана" width="370" />
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-title">Ресторан Seafood</h2>
@@ -102,8 +102,8 @@
                 </div>
               </a>
             </li>
-            <li class="card-set-list portfolio-link">
-              <a class="link" href="" target="_blank" rel="noreferrer noopener">
+            <li class="card-set-list">
+              <a class="link portfolio-link" href="" target="_blank" rel="noreferrer noopener">
                 <img src="./images/img11.jpg" alt="Наушники" width="370" />
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-title">Проект Prime</h2>
@@ -111,8 +111,8 @@
                 </div>
               </a>
             </li>
-            <li class="card-set-list portfolio-link">
-              <a class="link" href="" target="_blank" rel="noreferrer noopener">
+            <li class="card-set-list">
+              <a class="link portfolio-link" href="" target="_blank" rel="noreferrer noopener">
                 <img src="./images/img12.jpg" alt="Коробки-блоки" width="370" />
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-title">Проект Boxes</h2>
@@ -120,8 +120,8 @@
                 </div>
               </a>
             </li>
-            <li class="card-set-list portfolio-link">
-              <a class="link" href="" target="_blank" rel="noreferrer noopener">
+            <li class="card-set-list">
+              <a class="link portfolio-link" href="" target="_blank" rel="noreferrer noopener">
                 <img src="./images/img13.jpg" alt="Веб-сайт на пк" width="370" />
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-title">Inspiration has no Borders</h2>
@@ -129,8 +129,8 @@
                 </div>
               </a>
             </li>
-            <li class="card-set-list portfolio-link">
-              <a class="link" href="" target="_blank" rel="noreferrer noopener">
+            <li class="card-set-list">
+              <a class="link portfolio-link" href="" target="_blank" rel="noreferrer noopener">
                 <img src="./images/img14.jpg" alt="Каталог" width="370" />
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-title">Издание Limited Edition</h2>
@@ -138,8 +138,8 @@
                 </div>
               </a>
             </li>
-            <li class="card-set-list portfolio-link">
-              <a class="link" href="" target="_blank" rel="noreferrer noopener">
+            <li class="card-set-list">
+              <a class="link portfolio-link" href="" target="_blank" rel="noreferrer noopener">
                 <img src="./images/img15.jpg" alt="Этикетка" width="370" />
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-title">Проект LAB</h2>
@@ -147,8 +147,8 @@
                 </div>
               </a>
             </li>
-            <li class="card-set-list portfolio-link">
-              <a class="link" href="" target="_blank" rel="noreferrer noopener">
+            <li class="card-set-list">
+              <a class="link portfolio-link" href="" target="_blank" rel="noreferrer noopener">
                 <img src="./images/img16.jpg" alt="Приложение" width="370" />
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-title">Growing Business</h2>
@@ -163,7 +163,7 @@
     <footer class="footer">
       <div class="container footer-markup">
         <div class="footer-contact">
-          <a class="logo-link link" href="">Web<span class="logo-footer">Studio</span></a>
+          <a class="logo link" href="">Web<span class="logo-footer">Studio</span></a>
           <address>
             <ul class="list">
               <li class="address-list">
@@ -186,31 +186,31 @@
         </div>
         <div>
           <p class="social-link-title">Присоеденяйтесь</p>
-          <ul class="footer-social-list list">
+          <ul class="social-list list">
             <li class="social-list-items">
-              <a class="footer-social-link" href="">
-                <svg class="footer-social-icon" width="20" height="20">
+              <a class="social-link" href="" target="_blank" rel="noreferrer noopener">
+                <svg class="social-icon" width="20" height="20">
                   <use href="./images/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-items">
-              <a class="footer-social-link" href="">
-                <svg class="footer-social-icon" width="20" height="20">
+              <a class="social-link" href="" target="_blank" rel="noreferrer noopener">
+                <svg class="social-icon" width="20" height="20">
                   <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-items">
-              <a class="footer-social-link" href="">
-                <svg class="footer-social-icon" width="20" height="20">
+              <a class="social-link" href="" target="_blank" rel="noreferrer noopener">
+                <svg class="social-icon" width="20" height="20">
                   <use href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-items">
-              <a class="footer-social-link" href="">
-                <svg class="footer-social-icon" width="20" height="20">
+              <a class="social-link" href="" target="_blank" rel="noreferrer noopener">
+                <svg class="social-icon" width="20" height="20">
                   <use href="./images/sprite.svg#icon-linkedin"></use>
                 </svg>
               </a>
