--- a/portfolio.html
+++ b/portfolio.html
@@ -140,7 +140,14 @@
             </li>
             <li class="card-set-list">
               <a class="link portfolio-link" href="" target="_blank" rel="noreferrer noopener">
-                <img src="./images/img15.jpg" alt="Этикетка" width="370" />
+                <div class="team-list-item-img-wrapper">
+                  <img src="./images/img15.jpg" alt="Этикетка" width="370" />
+                  <p class="overlay">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-title">Проект LAB</h2>
                   <p class="portfolio-text">Маркетинг</p>
