--- a/index.html
+++ b/index.html
@@ -112,13 +112,28 @@
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="card-set list">
             <li class="card-set-list">
-              <img src="images/img1.jpg" alt="набор кода" width="370" height="294" />
+              <div class="work-pic">
+                <img src="images/img1.jpg" alt="набор кода" width="370" height="294" />
+                <div class="work-description">
+                  <p class="description-text">Десктопные приложения</p>
+                </div>
+              </div>
             </li>
             <li class="card-set-list">
-              <img src="images/img2.jpg" alt="разработка приложения" width="370" height="294" />
+              <div class="work-pic">
+                <img src="images/img2.jpg" alt="набор кода" width="370" height="294" />
+                <div class="work-description">
+                  <p class="description-text">Мобильные приложения</p>
+                </div>
+              </div>
             </li>
             <li class="card-set-list">
-              <img src="images/img3.jpg" alt="зарисовка дизайна" width="370" height="294" />
+              <div class="work-pic">
+                <img src="images/img3.jpg" alt="набор кода" width="370" height="294" />
+                <div class="work-description">
+                  <p class="description-text">Дизайнерские решения</p>
+                </div>
+              </div>
             </li>
           </ul>
         </div>
