--- a/portfolio.html
+++ b/portfolio.html
@@ -77,7 +77,14 @@
           <ul class="list card-set">
             <li class="card-set-list">
               <a class="link portfolio-link" href="" target="_blank" rel="noreferrer noopener">
-                <img src="./images/img8.jpg" alt="Веб-сайт на ноутбуке" width="370" />
+                <div class="portfolio-list-img-wrapper">
+                  <img src="./images/img8.jpg" alt="Этикетка" width="370" />
+                  <p class="overlay">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-title">Технокряк</h2>
                   <p class="portfolio-text">Веб-сайт</p>
@@ -86,7 +93,14 @@
             </li>
             <li class="card-set-list">
               <a class="link portfolio-link" href="" target="_blank" rel="noreferrer noopener">
-                <img src="./images/img9.jpg" alt="Постер баскетболистов" width="370" />
+                <div class="portfolio-list-img-wrapper">
+                  <img src="./images/img9.jpg" alt="Этикетка" width="370" />
+                  <p class="overlay">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
                   <p class="portfolio-text">Дизайн</p>
@@ -95,7 +109,14 @@
             </li>
             <li class="card-set-list">
               <a class="link portfolio-link" href="" target="_blank" rel="noreferrer noopener">
-                <img src="./images/img10.jpg" alt="Логотип рыбного ресторана" width="370" />
+                <div class="portfolio-list-img-wrapper">
+                  <img src="./images/img10.jpg" alt="Этикетка" width="370" />
+                  <p class="overlay">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-title">Ресторан Seafood</h2>
                   <p class="portfolio-text">Приложение</p>
@@ -104,7 +125,14 @@
             </li>
             <li class="card-set-list">
               <a class="link portfolio-link" href="" target="_blank" rel="noreferrer noopener">
-                <img src="./images/img11.jpg" alt="Наушники" width="370" />
+                <div class="portfolio-list-img-wrapper">
+                  <img src="./images/img11.jpg" alt="Этикетка" width="370" />
+                  <p class="overlay">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-title">Проект Prime</h2>
                   <p class="portfolio-text">Маркетинг</p>
@@ -113,7 +141,14 @@
             </li>
             <li class="card-set-list">
               <a class="link portfolio-link" href="" target="_blank" rel="noreferrer noopener">
-                <img src="./images/img12.jpg" alt="Коробки-блоки" width="370" />
+                <div class="portfolio-list-img-wrapper">
+                  <img src="./images/img12.jpg" alt="Этикетка" width="370" />
+                  <p class="overlay">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-title">Проект Boxes</h2>
                   <p class="portfolio-text">Приложение</p>
@@ -122,7 +157,14 @@
             </li>
             <li class="card-set-list">
               <a class="link portfolio-link" href="" target="_blank" rel="noreferrer noopener">
-                <img src="./images/img13.jpg" alt="Веб-сайт на пк" width="370" />
+                <div class="portfolio-list-img-wrapper">
+                  <img src="./images/img13.jpg" alt="Этикетка" width="370" />
+                  <p class="overlay">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-title">Inspiration has no Borders</h2>
                   <p class="portfolio-text">Веб-сайт</p>
@@ -131,7 +173,14 @@
             </li>
             <li class="card-set-list">
               <a class="link portfolio-link" href="" target="_blank" rel="noreferrer noopener">
-                <img src="./images/img14.jpg" alt="Каталог" width="370" />
+                <div class="portfolio-list-img-wrapper">
+                  <img src="./images/img14.jpg" alt="Этикетка" width="370" />
+                  <p class="overlay">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-title">Издание Limited Edition</h2>
                   <p class="portfolio-text">Дизайн</p>
@@ -140,7 +189,7 @@
             </li>
             <li class="card-set-list">
               <a class="link portfolio-link" href="" target="_blank" rel="noreferrer noopener">
-                <div class="team-list-item-img-wrapper">
+                <div class="portfolio-list-img-wrapper">
                   <img src="./images/img15.jpg" alt="Этикетка" width="370" />
                   <p class="overlay">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -156,7 +205,14 @@
             </li>
             <li class="card-set-list">
               <a class="link portfolio-link" href="" target="_blank" rel="noreferrer noopener">
-                <img src="./images/img16.jpg" alt="Приложение" width="370" />
+                <div class="portfolio-list-img-wrapper">
+                  <img src="./images/img16.jpg" alt="Этикетка" width="370" />
+                  <p class="overlay">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-title">Growing Business</h2>
                   <p class="portfolio-text">Приложение</p>
